# chatbot-demo

./: .env.example  .gitignore  PROJECT_DESCRIPTION.txt  langgraph.json  main.py  pyproject.toml
app/: main.py
app/api/: __init__.py  chat.py
app/core/: config.py
app/services/: graph.py  rag.py
data/documents/: sample.txt
docs/: PROJECT_PROPOSAL.md  PROJECT_PROPOSAL.txt  TRD.md  requirements.md  tasks.md
ui/: streamlit_app.py
